--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   google_fonts: ^6.1.0
   go_router: ^11.0.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
