--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   google_fonts: ^6.1.0
   go_router: ^11.0.0
   email_validator: ^2.1.17
+  firebase_auth: ^4.10.0
+  cloud_firestore: ^4.9.2
+  firebase_core: ^2.16.0
 
 dev_dependencies:
   flutter_test:
