--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.2.7
   animated_snack_bar: ^0.3.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
